[package]
name = "circle-packing"
version = "1.0.0"
authors = ["Maximo Fernandez <maxfer1221@gmail.com"]
description = "Circle Packing with Integrated FAST Feature Extraction"
liscense = "MIT"
repository = "https://github.com/maxfer1221/face_detection"
readme = "README.md"
keywords = ["circle packing", "feature extraction"]
edition = "2018"

[dependencies]
rand = "*"
image = "*"
crossbeam = "*"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["gfx"]
